crates/pos-core/tests/snapshots/schema_snapshots__table_command.snap
---
source: crates/pos-core/tests/schema_snapshots.rs
expression: table_command
---
{
  "kind": "AssignOrder",
  "data": {
    "venue_id": "00000000-0000-0000-0000-000000000028",
    "table_id": "00000000-0000-0000-0000-00000000002b",
    "order_id": "00000000-0000-0000-0000-000000000029"
  }
}
